Update dotnet.yml 2
fa..

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.0'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore UniversityStats/UniversityStats.sln  
 
       - name: Build
-        run: dotnet build --configuration Release
+        run: dotnet build UniversityStats/UniversityStats.sln --configuration Release  
 
       - name: Run tests
-        run: dotnet test --configuration Release --no-build --verbosity normal
+        run: dotnet test UniversityStats/UniversityStats.sln --configuration Release --no-build --verbosity normal 
