fix: исправление всех упоминаний UniversityStats.Api на UniversityStats.API
- Исправлена ссылка на проект в UniversityStats.Test.csproj
- Обновлены упоминания в README.md

--- a/UniversityStats/UniversityStats.Test/UniversityStats.Test.csproj
+++ b/UniversityStats/UniversityStats.Test/UniversityStats.Test.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UniversityStats.Domain\UniversityStats.Domain.csproj" />
-    <ProjectReference Include="..\UniversityStats.Api\UniversityStats.Api.csproj" />
+    <ProjectReference Include="..\UniversityStats.API\UniversityStats.API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
