Лабораторная работа 3: Рефакторинг контроллеров и сервисов
Основные изменения:
- Обновлены контроллеры для работы с асинхронными методами
- Переход на инфраструктурные сущности вместо DTO
- Добавлена поддержка async/await во всех методах
- Улучшена обработка ошибок и логирование
- Обновлены сигнатуры методов для соответствия новой архитектуре
- Исправлены предупреждения о nullable ссылках
- Обновлены маршруты и параметры методов

Технические улучшения:
- Использование CreatedAtAction для создания ресурсов
- Возврат NoContent() при успешном удалении
- Добавление проверок соответствия идентификаторов
- Удаление зависимостей от AutoMapper
- Централизация логики обработки запросов

Подготовка к следующим итерациям разработки системы университетской статистики

--- a/UniversityStats/UniversityStats.API/appsettings.json
+++ b/UniversityStats/UniversityStats.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=university_stats;User=root;Password=root;"
+  },
+  "Jwt": {
+    "Key": "ThisIsMyVeryLongAndSecureSecretKeyForJwtTokenGeneration",
+    "Issuer": "UniversityStatsAPI",
+    "Audience": "UniversityStatsClient"
+  }
 }
