Update project changes

--- a/UniversityStats/UniversityStats.API/appsettings.json
+++ b/UniversityStats/UniversityStats.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EducationDepartment": "Server=localhost;Port=3306;Database=data_3;Uid=root;Pwd=123456;"
+    "EducationDepartment": "Server=localhost;Port=3306;Database=data_3;Uid=root;Pwd=123456;Charset=utf8mb4;"
   }
 }
